--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "bootstrap-vue": "^1.5.1",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
+    "vue-router": "^3.0.7",
     "vuetify": "^1.5.16"
   },
   "devDependencies": {
@@ -66,9 +66,9 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.4.4",
     "jest-serializer-vue": "^0.3.0",
-    "nightwatch": "^1.1.12",
+    "nightwatch": "^1.1.13",
     "node-notifier": "^5.4.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.1",
     "ora": "^1.2.0",
     "portfinder": "^1.0.20",
     "postcss-import": "^11.0.0",
@@ -86,7 +86,8 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": ">=3.1.11",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.2.1"
   },
   "engines": {
